--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,7 @@
           </div>
         </li>
       </ul>
+      <button class="call">Say hello</button>
     </section>
      <script src="js/app.js"></script>
       <!-- The core Firebase JS SDK is always required and must be listed first -->
