--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,29 @@
       <body>
         <h1>Cloud functions</h1>
 
+           <!-- auth modals -->
+          <div class="auth open">
+            <div class="modal active">
+              <h2>Login</h2>
+              <form class="login">
+                <input type="text" name="email" placeholder="Email">
+                <input type="password" name="password" placeholder="Password">
+                <button>Login</button>
+                <p class="error"></p>
+              </form>
+              <div>No account? <a class="switch">Register instead</a></div>
+            </div>
+            <div class="modal">
+              <h2>Register</h2>
+              <form class="register">
+                <input type="text" name="email" placeholder="Email">
+                <input type="password" name="password" placeholder="Password">
+                <button>Register</button>
+                <p class="error"></p>
+              </form>
+              <div>Got an account? <a class="switch">Login instead</a></div>
+            </div>
+          </div>
 
         <!-- new request modal -->
         <div class="new-request">
@@ -45,6 +68,7 @@
       <button class="call">Say hello</button>
     </section>
      <script src="js/app.js"></script>
+     <script src="js/auth.js"></script>
       <!-- The core Firebase JS SDK is always required and must be listed first -->
       <script src="/__/firebase/7.15.0/firebase-app.js"></script>
 
